--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
     "react-native-web": "^0.21.0",
     "react-redux": "^9.2.0"
   },
